# libsoundio

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  README.md  Sdk.zig  build.zig  build.zig.ini  build.zig.zon  default.nix  soundio.pc.in
.github/workflows/: ci_build.yml
cmake/: FindAndroidOpenSLES.cmake  FindCoreAudio.cmake  FindJACK.cmake  FindLibm.cmake  FindPulseAudio.cmake  FindWASAPI.cmake  MingwToolchain.cmake
doc/: doxygen.conf.in
example/: list_devices.c  microphone.c  sine.c  sio_list_devices.c  sio_microphone.c  sio_record.c  sio_sine.c
soundio/: endian.h  os.h  soundio.h
src/: alsa.c  alsa.cpp  alsa.h  alsa.hpp  android.c  android.h  atomics.h  atomics.hpp  channel_layout.c  channel_layout.cpp  config.h.in  coreaudio.c  coreaudio.cpp  coreaudio.h  coreaudio.hpp  dummy.c  dummy.cpp  dummy.h  dummy.hpp  dummy_ring_buffer.cpp  dummy_ring_buffer.hpp  jack.c  jack.cpp  jack.h  jack.hpp  link_version_script.in  list.h  list.hpp  os.c  os.cpp  os.h  os.hpp  pulseaudio.c  pulseaudio.cpp  pulseaudio.h  pulseaudio.hpp  ring_buffer.c  ring_buffer.cpp  ring_buffer.h  ring_buffer.hpp  (+17 more)
test/: backend_disconnect_recover.c  latency.c  latency.cpp  overflow.c  underflow.c  unit_tests.c  unit_tests.cpp  valgrind.supp
vs/x64/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  backend_disconnect_recover.vcxproj  backend_disconnect_recover.vcxproj.filters  cmake_install.cmake  config.h  coverage.vcxproj  coverage.vcxproj.filters  doc.vcxproj  doc.vcxproj.filters  doxygen.conf  latency.vcxproj  latency.vcxproj.filters  libsoundio.sln  libsoundio_shared.vcxproj  libsoundio_static.vcxproj  libsoundio_static.vcxproj.filters  overflow.vcxproj  overflow.vcxproj.filters  sio_list_devices.vcxproj  sio_list_devices.vcxproj.filters  sio_microphone.vcxproj  sio_microphone.vcxproj.filters  sio_record.vcxproj  sio_record.vcxproj.filters  sio_sine.vcxproj  sio_sine.vcxproj.filters  underflow.vcxproj  underflow.vcxproj.filters  unit_tests.vcxproj  unit_tests.vcxproj.filters
vs/x86/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  backend_disconnect_recover.vcxproj  backend_disconnect_recover.vcxproj.filters  cmake_install.cmake  coverage.vcxproj  coverage.vcxproj.filters  doc.vcxproj  doc.vcxproj.filters  doxygen.conf  latency.vcxproj  latency.vcxproj.filters  libsoundio.sln  libsoundio_shared.vcxproj  libsoundio_static.vcxproj  libsoundio_static.vcxproj.filters  overflow.vcxproj  overflow.vcxproj.filters  sio_list_devices.vcxproj  sio_list_devices.vcxproj.filters  sio_microphone.vcxproj  sio_microphone.vcxproj.filters  sio_record.vcxproj  sio_record.vcxproj.filters  sio_sine.vcxproj  sio_sine.vcxproj.filters  underflow.vcxproj  underflow.vcxproj.filters  unit_tests.vcxproj  unit_tests.vcxproj.filters
